--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="defaultFrom">1.00</string>
     <string name="defaultComission">3.0</string>
     <string name="defaultTipus">1.2456891</string>
-    <string name="lblTipus">Tipus €/$</string>
+    <string name="lblTipus">Tipus $/€</string>
     <string name="lblComission">% Comisión</string>
     <string name="EUR">€</string>
     <string name="USD">$</string>
