Texto en botón "Cambiar"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="lblCommission">% Comisión</string>
     <string name="EUR">€</string>
     <string name="USD">$</string>
+    <string name="flip">Cambiar</string>
 
 </resources>
